@@ -1,1 +1,1 @@
-1.8.2rc0
+1.8.2rc1
